--- a/gtk-3.0/widgets/_notebooks.scss
+++ b/gtk-3.0/widgets/_notebooks.scss
@@ -227,7 +227,6 @@ notebook {
         }
 
         &:first-child {
-          margin-left: -4px;
           margin-right: 4px;
         }
       }
